<?xml version="1.0"?>
<package>
  <name>azi_drive</name>
  <version>0.1.0</version>
  <description>
    ROS-based nonlinear control allocation for azipod/azimuth thrusters designed for the Propagator ASV
  </description>
  <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>unittest</test_depend>
  <export>
  </export>
</package>