<?xml version="1.0"?>
<package>
  <name>azi_drive</name>
  <version>0.1.0</version>
  <description>
    ROS-based nonlinear control allocation for azipod/azimuth thrusters designed for the Propagator ASV
  </description>
  <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>unittest</test_depend>

  <build_depend>python_module</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller</build_depend>

  <run_depend>python_module</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>controller</run_depend>

  <export>
  </export>
</package>