<package>
  <name>boat_launch</name>
  <version>1.0.0</version>
  <description>boat_launch</description>
  <maintainer email="forrest@forre.st">PropaGator</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/boat_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>PropaGator</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>thruster_mapper</build_depend>
  <build_depend>depth_driver</build_depend>
  <build_depend>c3_trajectory_generator</build_depend>
  <build_depend>controller</build_depend>
  <build_depend>propagator_motor_driver</build_depend>
  <build_depend>sim</build_depend>
  <build_depend>odometry_utils</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>thruster_mapper</run_depend>
  <run_depend>depth_driver</run_depend>
  <run_depend>c3_trajectory_generator</run_depend>
  <run_depend>controller</run_depend>
  <run_depend>propagator_motor_driver</run_depend>
  <run_depend>sim</run_depend>
  <run_depend>odometry_utils</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>thruster_mapper</test_depend> -->
  <!-- <test_depend>propagator_motor_driver</test_depend> -->
  <!-- <test_depend>odometry_utils</test_depend> -->
  <!-- <test_depend>controller</test_depend> -->
  <!-- <test_depend>c3_trajectory_generator</test_depend> -->
  <!-- <test_depend>depth_driver</test_depend> -->
  <!-- <test_depend>sim</test_depend> -->

</package>