<package>
  <name>boatsim</name>
  <version>1.0.0</version>
  <description>boatsim</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/boatsim</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sim</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sim</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sim</test_depend> -->

</package>