<?xml version="1.0"?>
<package>
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>The obstacle_avoidance package</description>

  <maintainer email="nallj@ufl.edu">James Nall</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="nallj@ufl.edu">James Nall</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--<build_depend>message_generation</build_depend>-->
  <build_depend>lidar_vision</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--<run_depend>message_runtime</run_depend>-->
  <run_depend>lidar_vision</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
