<?xml version="1.0"?>
<package>
  <name>server_interaction</name>
  <version>0.0.0</version>
  <description>The server_interaction package</description>

  <maintainer email="gaboth22@ufl.edu">gabriel</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>message_generation</run_depend> 


  <export>

  </export>
</package>
