<package>
  <name>carrot</name>
  <version>1.0.0</version>
  <description>carrot</description>
  <maintainer email="navid102@gmail.com">Navid Shahrestani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carrot</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Navid Shahrestani</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>c3_trajectory_generator</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>c3_trajectory_generator</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>c3_trajectory_generator</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

</package>