<package>
  <name>path_planner</name>
  <version>1.0.0</version>
  <description>path_planner</description>
  <maintainer email="navid102@gmail.com">Navid Shahrestani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/path_planner</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Navid Shahrestani</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>buoys</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>uf_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>c3_trajectory_generator</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sim</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>buoys</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>uf_common</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>c3_trajectory_generator</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sim</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>buoys</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>controller</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>uf_common</test_depend> -->
  <!-- <test_depend>c3_trajectory_generator</test_depend> -->
  <!-- <test_depend>sim</test_depend> -->

</package>