<package>
  <name>gps_to_vel_py</name>
  <version>1.0.0</version>
  <description>gps_to_vel_py</description>
  <maintainer email="colinw@ufl.edu">colin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gps_to_vel_py</url>
  <!-- <url type="bugtracker"></url> -->

  <author>colin</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>tf</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tf</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>gps_common</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

</package>