<package>
  <name>microstrain_3dmgx1</name>
  <version>1.0.0</version>
  <description>microstrain_3dmgx1</description>
  <maintainer email="colinw@ufl.edu">colin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/microstrain_3dmgx1</url>
  <!-- <url type="bugtracker"></url> -->

  <author>colin</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>